// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`autolink.md - markdown-verify 1`] = `
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

`;

exports[`autolink.md - markdown-verify 2`] = `
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<https://www.example.com>

<hello@example.com>

<mailto:hello@example.com>

`;

exports[`entity.md - markdown-verify 1`] = `
[Test](http://localhost:8080/test?language=DE&currency=EUR)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[Test](http://localhost:8080/test?language=DE&currency=EUR)

`;

exports[`entity.md - markdown-verify 2`] = `
[Test](http://localhost:8080/test?language=DE&currency=EUR)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[Test](http://localhost:8080/test?language=DE&currency=EUR)

`;

exports[`long.md - markdown-verify 1`] = `
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

`;

exports[`long.md - markdown-verify 2`] = `
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[podium context](https://github.schibsted.io/finn/podium/tree/master/packages/podium-context)

`;

exports[`simple.md - markdown-verify 1`] = `
[hello](#world)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world)

`;

exports[`simple.md - markdown-verify 2`] = `
[hello](#world)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world)

`;

exports[`title.md - markdown-verify 1`] = `
[hello](#world "title")
[hello](#world 'title')
[hello](#world (title))

[a](https://example.com "\\"")
[a](https://example.com '\\"')
[a](https://example.com (\\"))

[a](https://example.com "\\'")
[a](https://example.com '\\'')
[a](https://example.com (\\'))

[a](https://example.com "\\'")
[a](https://example.com '\\)')
[a](https://example.com (\\)))

<!-- magical incantations -->

[a](https://example.com "\\"')")
[a](https://example.com '"\\')')
[a](https://example.com ("'\\)))

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com "\\\\\\"")
[a](https://example.com '\\\\\\'')
[a](https://example.com (\\\\\\)))

[a](https://example.com "\\\\'")
[a](https://example.com '\\\\"')
[a](https://example.com (\\\\"))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world "title") [hello](#world "title") [hello](#world "title")

[a](https://example.com '"') [a](https://example.com '"')
[a](https://example.com '"')

[a](https://example.com "'") [a](https://example.com "'")
[a](https://example.com "'")

[a](https://example.com "'") [a](https://example.com ")")
[a](https://example.com ")")

<!-- magical incantations -->

[a](https://example.com "\\"')") [a](https://example.com "\\"')")
[a](https://example.com "\\"')")

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com '"') [a](https://example.com "'")
[a](https://example.com ")")

[a](https://example.com "'") [a](https://example.com '"')
[a](https://example.com '"')

`;

exports[`title.md - markdown-verify 2`] = `
[hello](#world "title")
[hello](#world 'title')
[hello](#world (title))

[a](https://example.com "\\"")
[a](https://example.com '\\"')
[a](https://example.com (\\"))

[a](https://example.com "\\'")
[a](https://example.com '\\'')
[a](https://example.com (\\'))

[a](https://example.com "\\'")
[a](https://example.com '\\)')
[a](https://example.com (\\)))

<!-- magical incantations -->

[a](https://example.com "\\"')")
[a](https://example.com '"\\')')
[a](https://example.com ("'\\)))

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com "\\\\\\"")
[a](https://example.com '\\\\\\'')
[a](https://example.com (\\\\\\)))

[a](https://example.com "\\\\'")
[a](https://example.com '\\\\"')
[a](https://example.com (\\\\"))
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[hello](#world 'title') [hello](#world 'title') [hello](#world 'title')

[a](https://example.com '"') [a](https://example.com '"')
[a](https://example.com '"')

[a](https://example.com "'") [a](https://example.com "'")
[a](https://example.com "'")

[a](https://example.com "'") [a](https://example.com ')')
[a](https://example.com ')')

<!-- magical incantations -->

[a](https://example.com '"\\')') [a](https://example.com '"\\')')
[a](https://example.com '"\\')')

<!-- mis-parsing, \`\\\` are missing: -->

[a](https://example.com '"') [a](https://example.com "'")
[a](https://example.com ')')

[a](https://example.com "'") [a](https://example.com '"')
[a](https://example.com '"')

`;

exports[`url.md - markdown-verify 1`] = `
https://www.example.com/
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
https://www.example.com/

`;

exports[`url.md - markdown-verify 2`] = `
https://www.example.com/
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
https://www.example.com/

`;
